--- a/package.json
+++ b/package.json
@@ -3,11 +3,11 @@
   "version": "1.0.0",
   "description": "",
   "scripts": {
-    "start_rsc": "node --conditions react-server server_dist/main.js",
-    "start_ssr": "node server_dist/ssr_server.js",
-    "build:server": "./scripts/server_build.sh",
-    "build:client": "rm -rf dist/; tsc -p ./src/react-client/tsconfig.json; webpack",
-    "build": "npm run build:server; npm run build:client;"
+    "start_rsc": "nodemon --delay 200ms --conditions react-server server_dist/main.js",
+    "start_ssr": "nodemon --delay 200ms server_dist/ssr_server.js",
+    "build:server": "./scripts/server-build.sh",
+    "build:client": "./scripts/client-build.sh",
+    "watch": "node live-reload.cjs"
   },
   "type": "module",
   "keywords": [],
@@ -23,13 +23,19 @@
     "@babel/cli": "^7.24.8",
     "@babel/core": "^7.23.2",
     "@babel/plugin-transform-modules-commonjs": "^7.23.0",
+    "@babel/preset-env": "^7.25.4",
+    "@babel/preset-react": "^7.24.7",
+    "@babel/preset-typescript": "^7.24.7",
     "@types/express": "^4.17.21",
     "@types/node": "^22.3.0",
     "@types/react": "npm:types-react@rc",
     "@types/react-dom": "npm:types-react-dom@rc",
+    "chokidar": "^3.6.0",
+    "nodemon": "^3.1.4",
     "typescript": "^5.5.3",
     "webpack": "^5.93.0",
-    "webpack-cli": "^5.1.4"
+    "webpack-cli": "^5.1.4",
+    "ws": "^8.18.0"
   },
   "overrides": {
     "@types/react": "npm:types-react@rc",
