--- a/package.json
+++ b/package.json
@@ -5,8 +5,10 @@
   "scripts": {
     "start_rsc": "nodemon --delay 200ms --conditions react-server server_dist/main.js",
     "start_ssr": "nodemon --delay 200ms server_dist/ssr_server.js",
-    "build:server": "./scripts/server-build.sh",
-    "build:client": "./scripts/client-build.sh",
+    "build:server": "babel --extensions '.ts,.tsx' --watch ./src/react-server --out-dir ./server_dist --copy-files;",
+    "postbuild:server": "echo '{ \"type\": \"commonjs\"}' > ./server_dist/package.json;",
+    "build:client": "webpack -w",
+    "prebuild:client": "pnpm build:server &",
     "watch": "node live-reload.cjs"
   },
   "type": "module",
@@ -30,6 +32,7 @@
     "@types/node": "^22.3.0",
     "@types/react": "npm:types-react@rc",
     "@types/react-dom": "npm:types-react-dom@rc",
+    "babel-loader": "^9.1.3",
     "chokidar": "^3.6.0",
     "nodemon": "^3.1.4",
     "typescript": "^5.5.3",
