--- a/package.json
+++ b/package.json
@@ -3,12 +3,14 @@
   "version": "1.0.0",
   "description": "",
   "scripts": {
+    "build:server": "babel --extensions '.ts,.tsx' --watch ./src/react-server --out-dir ./server_dist --copy-files;",
+    "build:client": "webpack -w",
     "start_rsc": "nodemon --delay 200ms --conditions react-server server_dist/main.js",
     "start_ssr": "nodemon --delay 200ms server_dist/ssr_server.js",
-    "build:server": "babel --extensions '.ts,.tsx' --watch ./src/react-server --out-dir ./server_dist --copy-files;",
-    "postbuild:server": "echo '{ \"type\": \"commonjs\"}' > ./server_dist/package.json;",
-    "build:client": "webpack -w",
-    "prebuild:client": "pnpm build:server &",
+    "prestart_rsc": "pnpm cjs",
+    "prestart_ssr": "pnpm cjs",
+    "cjs": "echo '{ \"type\": \"commonjs\"}' > ./server_dist/package.json;",
+    "init-db": "node server_dist/api/init-db.js",
     "watch": "node live-reload.cjs"
   },
   "type": "module",
@@ -16,10 +18,14 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "dotenv": "^16.4.5",
     "express": "^4.19.2",
+    "marked": "^14.1.2",
     "react": "19.0.0-rc-a03254bc-20240905",
     "react-dom": "19.0.0-rc-a03254bc-20240905",
-    "react-server-dom-webpack": "19.0.0-rc-a03254bc-20240905"
+    "react-server-dom-webpack": "19.0.0-rc-a03254bc-20240905",
+    "sanitize-html": "^2.13.0",
+    "sqlite3": "^5.1.7"
   },
   "devDependencies": {
     "@babel/cli": "^7.24.8",
