--- a/src/react-server/tsconfig.json
+++ b/src/react-server/tsconfig.json
@@ -3,10 +3,12 @@
 	"compilerOptions": {
 		"outDir": "./dist",
 		"lib": [
-			"ES2023"
+			"ES2023",
+			"DOM"
 		],
 		"target": "ESNext",
-		"module": "NodeNext"
+		"module": "NodeNext",
+		"allowJs": true
 	},
 	"include": [
 		"./**/*"
