--- a/package.json
+++ b/package.json
@@ -3,14 +3,14 @@
   "version": "1.0.0",
   "description": "",
   "scripts": {
-    "build:server": "babel --extensions '.ts,.tsx' --watch ./src/react-server --out-dir ./server_dist --copy-files;",
+    "build:server": "babel --ignore src/framework/client/ --extensions '.ts,.tsx' --watch ./src --out-dir ./dist --copy-files;",
     "build:client": "webpack -w",
-    "start_rsc": "nodemon --delay 200ms --conditions react-server server_dist/main.js",
-    "start_ssr": "nodemon --delay 200ms server_dist/ssr_server.js",
+    "start_rsc": "nodemon --delay 200ms --conditions react-server ./dist/framework/servers/main.js",
+    "start_ssr": "nodemon --delay 200ms ./dist/framework/servers/ssr_server.js",
     "prestart_rsc": "pnpm cjs",
     "prestart_ssr": "pnpm cjs",
-    "cjs": "echo '{ \"type\": \"commonjs\"}' > ./server_dist/package.json;",
-    "init-db": "node server_dist/api/init-db.js",
+    "cjs": "echo '{ \"type\": \"commonjs\"}' > ./dist/package.json;",
+    "init-db": "node ./dist/framework/servers/api/init-db.js",
     "watch": "node live-reload.cjs"
   },
   "type": "module",
