--- a/src/tsconfig.json
+++ b/src/tsconfig.json
@@ -1,5 +1,5 @@
 {
-	"extends": "../../tsconfig.json",
+	"extends": "../tsconfig.json",
 	"compilerOptions": {
 		"outDir": "./dist",
 		"lib": [
@@ -14,6 +14,6 @@
 		"./**/*"
 	],
 	"exclude": [
-		"main.js"
+		"./framework/client"
 	]
 }
