add babel register

--- a/package.json
+++ b/package.json
@@ -3,17 +3,13 @@
   "version": "1.0.0",
   "description": "",
   "scripts": {
-    "build:server": "babel --ignore src/framework/client/ --extensions '.ts,.tsx' --watch ./src --out-dir ./dist --copy-files;",
+    "build:server": "tsc -w",
     "build:client": "webpack -w",
-    "start_rsc": "nodemon --delay 200ms --conditions react-server ./dist/framework/servers/main.js",
-    "start_ssr": "nodemon --delay 200ms ./dist/framework/servers/ssr_server.js",
-    "prestart_rsc": "pnpm cjs",
-    "prestart_ssr": "pnpm cjs",
-    "cjs": "echo '{ \"type\": \"commonjs\"}' > ./dist/package.json;",
+    "start_rsc": "nodemon --delay 200ms --conditions react-server ./main/main_rsc.js",
+    "start_ssr": "nodemon --delay 200ms ./main/main_ssr.js",
     "init-db": "node ./dist/framework/servers/api/init-db.js",
     "watch": "node live-reload.cjs"
   },
-  "type": "module",
   "keywords": [],
   "author": "",
   "license": "ISC",
@@ -28,12 +24,10 @@
     "sqlite3": "^5.1.7"
   },
   "devDependencies": {
-    "@babel/cli": "^7.24.8",
     "@babel/core": "^7.23.2",
+    "@babel/plugin-transform-dynamic-import": "^7.24.7",
     "@babel/plugin-transform-modules-commonjs": "^7.23.0",
-    "@babel/preset-env": "^7.25.4",
-    "@babel/preset-react": "^7.24.7",
-    "@babel/preset-typescript": "^7.24.7",
+    "@babel/register": "^7.24.6",
     "@types/express": "^4.17.21",
     "@types/node": "^22.3.0",
     "@types/react": "npm:types-react@rc",
