--- a/package.json
+++ b/package.json
@@ -5,8 +5,10 @@
   "scripts": {
     "build:server": "tsc -w",
     "build:client": "webpack -w",
-    "start_rsc": "nodemon --delay 200ms --conditions react-server ./main/main_rsc.js",
-    "start_ssr": "nodemon  --delay 200ms --import ./node-loaders/register-hooks.mjs ./dist/framework/servers/ssr_server.js",
+    "build": "node ./scripts/build.js",
+    "start:rsc": "nodemon --delay 200ms --conditions react-server ./main/main_rsc.js",
+    "start:ssr": "nodemon  --delay 200ms --import ./node-loaders/register-hooks.mjs ./dist/framework/servers/ssr_server.js",
+    "start": "concurrently \"npm run start:rsc\" \"npm run start:ssr\" \"npm run watch\"",
     "init-db": "node ./dist/framework/servers/api/init-db.mjs",
     "watch": "node live-reload.cjs"
   },
@@ -46,6 +48,6 @@
     "@types/react-dom": "npm:types-react-dom@rc"
   },
   "engines": {
-    "node": ">=20.17.0"
+    "node": ">=20"
   }
 }
