--- a/package.json
+++ b/package.json
@@ -35,8 +35,8 @@
     "@types/node": "^22.3.0",
     "@types/react": "npm:types-react@rc",
     "@types/react-dom": "npm:types-react-dom@rc",
-    "babel-loader": "^9.1.3",
     "chokidar": "^3.6.0",
+    "concurrently": "^9.0.1",
     "nodemon": "^3.1.4",
     "typescript": "^5.5.3",
     "webpack": "^5.93.0",
