--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,7 @@
 {
   "compilerOptions": {
     "jsx": "react-jsx",
+    "sourceMap": true,
     "strict": true,
     "skipLibCheck": true,
     "noUnusedLocals": true,
